--- a/ci/Dockerfile.train
+++ b/ci/Dockerfile.train
@@ -3,20 +3,27 @@ FROM ubuntu:20.04
 ENV DEBIAN_FRONTEND="noninteractive"
 
 RUN apt-get update && apt-get -y upgrade \
-    && apt-get install -y curl \
-    && apt-get install -y python3.9 python3.9-dev python3.9-distutils \
-    && apt-get install -y openjdk-8-jdk
+    && apt-get install -y curl --no-install-recommends --no-upgrade \
+    && apt-get install -y python3.9 python3.9-dev python3.9-distutils --no-install-recommends --no-upgrade \
+    && apt-get install -y openjdk-8-jdk --no-install-recommends --no-upgrade \
+    && apt-get install -y jq --no-install-recommends --no-upgrade \
+    && rm -rf /var/lib/apt/lists/*
+
+# dir permissions
+RUN mkdir -p /tmp/model_file \
+    && chmod a+rwx -R /tmp/model_file
 
 ## Install pip
-RUN curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
-RUN python3.9 get-pip.py
+RUN curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py \
+    && python3.9 get-pip.py
 
 ## Install dependencies
-RUN pip3 install torch --index-url https://download.pytorch.org/whl/cpu
-RUN pip3 --default-timeout=1000 install pyspark pandas opacus onnx onnx2pytorch scikit-learn scipy matplotlib 
-
-RUN apt-get install -y jq
-
+RUN pip3 install torch==2.1.0+cpu --index-url https://download.pytorch.org/whl/cpu \
+    && pip3 --default-timeout=1000 install pyspark==3.5.0 pandas==2.1.3 opacus==1.4.0 onnx==1.15.0 onnx2pytorch==0.4.1 scikit-learn==1.3.2 scipy==1.11.3 matplotlib==3.8.1 \
+    && pip3 cache purge
+    
 COPY train/ccr_join.py ccr_join.py 
 COPY train/ccr_train.py ccr_train.py
 COPY train/run.sh run.sh
+
+ENV SPARK_LOCAL_IP='localhost'
